<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lock Air</string>
    <string name="about_us">Simple &#038; Beautiful\n\nyushaojian13@163.com\n\nhttps://github.com/yushaojian13/Lock_Air</string>
    <string name="action_exit">Exit</string>
    <string name="unlock">Unlock</string>
    <string name="select_unlock">Select unlock style</string>
    
    <!-- widget -->
    <string name="widget_style_digit">Digit</string>
    <string name="widget_style_new">New</string>
    <string name="widget_style_cicle">Circle</string>
    <string name="widget_style_layer">Layer</string>
    <string name="widget_primary_color1">Write</string>
    <string name="widget_primary_color2">Red</string>
    <string name="widget_secondary_color1">Write</string>
    <string name="widget_secondary_color2">Green</string>
    <string name="widget_font1">UnidreamLED</string>
    <string name="widget_font2">CaviarDreams</string>
    <string name="widget_default">Default</string>

    <string name="widget_shadow">Shadow</string>
    <string name="enable">Enable</string>

    <string-array name="menu">
        <item>About</item>
        <item>Exit</item>
    </string-array>
    <string-array name="array_unlock">
        <item>Style 1</item>
        <item>Style 2</item>
    </string-array>

    <string name="month">月</string>
    <string name="day">日</string>
    <string name="am">上午</string>
    <string name="pm">下午</string>

    <string-array name="array_week_short">
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
        <item>日</item>
    </string-array>
    <string-array name="array_week_normal">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>
    <string-array name="array_week_full">
        <item>星期日</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
    </string-array>

</resources>